+ moved build output int out dir + added prompt for sides when missing arguments + limited user input string to size MAX_USER_INPUT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ add_executable(${PROJECT_NAME}
     src/main.c
     src/triangle.c
 )
-target_link_libraries(${PROJECT_NAME} m)
+if (UNIX)
+    target_link_libraries(${PROJECT_NAME} m)
+endif (UNIX)
